Add UI to enforce avatar size restrictions

Add code to Accounts KCM that will allow users to crop avatar and will
scale it down to maximum size allowed by server (or to some reasonable
values if server/gabble does not report avatarRequirements())

REVIEW: 110929
BUG: 279112
FIXED-IN: 0.7.0